Combine summarize endpoints
