# server/api/openapi.yaml
@@ -152,10 +152,10 @@ paths:
       operationId: summarizePOST
       requestBody:
         content:
-          text/plain:
+          application/json:
             schema:
-              type: string
-        description: Input text for summarization
+              $ref: '#/components/schemas/SummarizeRequest'
+        description: Input text or the URL of webpage to be summarized.
         required: true
       responses:
         "200":
@@ -165,29 +165,6 @@ paths:
                 $ref: '#/components/schemas/Summary'
           description: Summarized text
       summary: Summarize webpage given text.
-      tags:
-      - summarize
-      x-eov-operation-handler: controllers/SummarizeController
-  /summarizeByURL:
-    post:
-      description: Calls external summarizer API to
-      operationId: summarizeByURLPOST
-      requestBody:
-        content:
-          text/plain:
-            schema:
-              format: uri
-              type: string
-        description: URL of website to be scraped.
-        required: true
-      responses:
-        "200":
-          content:
-            text/plain:
-              schema:
-                $ref: '#/components/schemas/Summary'
-          description: Summarized text
-      summary: Summarize webpage given URL.
       tags:
       - summarize
       x-eov-operation-handler: controllers/SummarizeController
@@ -231,6 +208,25 @@ components:
           type: array
       required:
       - name
+      type: object
+    SummarizeRequest:
+      oneOf:
+      - $ref: '#/components/schemas/SummarizeByText'
+      - $ref: '#/components/schemas/SummarizeByURL'
+    SummarizeByText:
+      properties:
+        plaintext:
+          type: string
+      required:
+      - plaintext
+      type: object
+    SummarizeByURL:
+      properties:
+        url:
+          format: uri
+          type: string
+      required:
+      - url
       type: object
     Summary:
       example:
